--- a/views/users/const/header.ejs
+++ b/views/users/const/header.ejs
@@ -1,4 +1,4 @@
-<header class="bg-white drop-shadow-sm">
+<header style="font-size: 18px;" class="bg-white drop-shadow-sm">
     <nav class=" mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8" aria-label="Global">
         <div class="flex lg:flex-1">
             <a href="/" class="-m-1.5 p-1.5">
@@ -8,9 +8,10 @@
         </div>
 
         <div class="hidden lg:flex lg:gap-x-12">
-            <a href="/" class="text-sm font-semibold leading-6 text-gray-900">خانه</a>
-            <a href="/about" class="text-sm font-semibold leading-6 text-gray-900">درباره ما </a>
-            <a href="/contact" class="text-sm font-semibold leading-6 text-gray-900">تماس با ما</a>
+            <a href="/" class="font-semibold leading-6 text-gray-900">خانه</a>
+            <a href="/search-tickets" class="font-semibold leading-6 text-gray-900">بلیط گرفتن</a>
+            <a href="/about" class="font-semibold leading-6 text-gray-900">درباره ما </a>
+            <a href="/contact" class="font-semibold leading-6 text-gray-900">تماس با ما</a>
         </div>
         <div id="user-auth-msg" class="hidden lg:flex lg:flex-1 lg:justify-end">
             <!-- <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Log in <span
