--- a/views/users/searchTickets.ejs
+++ b/views/users/searchTickets.ejs
@@ -23,7 +23,7 @@
             <!-- <div class="bg-cover bg-center w-full h-64"
             style="background-image: url('');">
         </div> -->
-            <!-- <div style="font-size: 18px;margin-top: 40px;"
+            <div style="font-size: 18px;margin-top: 40px;"
                 class="flex w-2/3 mx-auto flex-row justify-between items-center mb-6 p-12 border border-gray-300 shadow-lg rounded-lg bg-white">
                 <select style="width: 180px;" id="firstCity" class="bg-white mr-6 px-4 py-2 border rounded-md">
                     <option selected>مبدا</option>
@@ -100,11 +100,13 @@
                     class="bg-white mr-6 px-4 py-6 border rounded-md" data-jdp data-jdp-min-date="today"
                     placeholder="تاریخ حرکت" />
 
-                <button style="width: 150px;" class="bg-yellow-400 mr-6 px-6 py- border hover:bg-yellow-300 rounded-md"
-                    id="search">
-                    جستجو
-                </button>
-            </div> -->
+                    <div class="mr-6 p-2">
+                        <button style="width: 200px;height: 50px;" class="bg-yellow-400 border border-yellow-500 hover:bg-yellow-300 rounded-md"
+                            id="search">
+                            جستجو
+                        </button>
+                    </div>
+            </div>
 
 
             <div id="bus" class="flex flex-col justify-center items-center m-6">
@@ -304,7 +306,7 @@
                 }
             };
         </script>
-        <!-- <script>
+        <script>
             jalaliDatepicker.startWatch({
                 minDate: "attr",
                 maxDate: "attr"
@@ -317,7 +319,7 @@
                 jalaliDatepicker.hide();
                 jalaliDatepicker.show(elm);
             }, 1000);
-        </script> -->
+        </script>
         <script>
             let authMsg = document.getElementById("user-auth-msg")
             let userStorageInfo = localStorage.getItem("user")
