auth in frontend done

--- a/views/users/const/profileSidebar.ejs
+++ b/views/users/const/profileSidebar.ejs
@@ -50,6 +50,9 @@
             </div>
             Inbox
         </div>
+        <div>
+            <a href="/api/v1/users/auth/logout">خروج از حساب کاربری</a>
+        </div>
 
     </nav>
 </div>
