--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,216 +1,84 @@
 <!DOCTYPE html>
-<html lang="fa" dir="rtl">
+<html lang="ar" dir="rtl">
 
-<%-include("./const/head")%>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <body class="bg-white">
+    <title>ورود</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/128/3304/3304749.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js"></script>
+    <link rel="stylesheet" href="../../css/toastify.css">
+    <style>
+        .toggle-password {
+            cursor: pointer;
+        }
+    </style>
+</head>
 
-
-        <div style="display: none;" id="second-auth" class="flex mt-12 items-center justify-center py-10 px-12">
-            <form
-                class="mx-auto w-full max-w-[400px] bg-white mt-10 border rounded-lg border-gray-300 shadow py-10 px-10">
-                <p class="text-right text-2xl font-bold p-2">
-                    کد تایید را وارد کنید
-                </p>
-                <p id="otp-message" class="text-right text-gray-700 mt-4 p-2">
-
-                </p>
-                <div class="flex justify-between gap-2 mb-4 mt-6">
-                    <input
-                        class="w-12 h-12 text-center border rounded-md shadow-sm focus:border-yellow-500 focus:ring-yellow-500 outline-none"
-                        type="text" maxlength="1" pattern="[0-9]" inputmode="numeric" required id="otp-5">
-                    <input
-                        class="w-12 h-12 text-center border rounded-md shadow-sm focus:border-yellow-500 focus:ring-yellow-500 outline-none"
-                        type="text" maxlength="1" pattern="[0-9]" inputmode="numeric" required id="otp-4">
-                    <input
-                        class="w-12 h-12 text-center border rounded-md shadow-sm focus:border-yellow-500 focus:ring-yellow-500 outline-none"
-                        type="text" maxlength="1" pattern="[0-9]" inputmode="numeric" required id="otp-3">
-                    <input
-                        class="w-12 h-12 text-center border rounded-md shadow-sm focus:border-yellow-500 focus:ring-yellow-500 outline-none"
-                        type="text" maxlength="1" pattern="[0-9]" inputmode="numeric" required id="otp-2">
-                    <input
-                        class="w-12 h-12 text-center border rounded-md shadow-sm focus:border-yellow-500 focus:ring-yellow-500 outline-none"
-                        type="text" maxlength="1" pattern="[0-9]" inputmode="numeric" required id="otp-1">
-                </div>
-                <div style="display: none;" id="send-again-link" class="mt-2 mb-2">
-                    <a class="block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800 mt-2" href="#">
-                        ارسال مجدد کد
-                    </a>
-                </div>
-                <div class="flex flex-col items-center justify-center">
-                    <p id="two-sec" class="mb-6 mt-6"></p>
-                    <button id="verify-otp-btn"
-                        class="bg-blue-500 w-full hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                        type="button">
-                        تایید کد
-                    </button>
-
-                </div>
-            </form>
-        </div>
-
-
-        <div id="first-auth" class="flex items-center justify-center py-10 px-12">
-            <div class="mx-auto w-full max-w-[650px] bg-white border rounded-lg border-gray-300 shadow py-2 px-10">
-                <span class="text-2xl block font-bold mt-8 text-center"> ثبت نام </span>
-                <p style="text-align: center;" class="mt-2 mb-2 text-center">در زیر می توانید ثبت نام کنید.</p>
-                <form action="javascript:void(0);">
-                    <div class="mb-5 pt-3">
-                        <div class="-mx-3 flex flex-wrap">
-                            <div class="w-full px-3 sm:w-1/2">
-                                <div class="mb-5">
-                                    <label class="font-medium text-right block mb-2 mt-2 text-gray-700" for="password">
-                                        نام و نام خانوادگی
-                                    </label>
-                                    <input type="text" name="name" id="name" placeholder="نام و نام خانوادگی"
-                                        class="w-full rounded-md border border-[#e0e0e0] bg-white mb-2 p-6 text-base font-medium text-[#6B7280] focus:outline-none focus:shadow-outline-yellow focus:border-yellow-300 focus:shadow-md" />
-                                    <span class="text-red-500" id="name-error"></span>
-                                </div>
-                            </div>
-                            <div class="w-full px-3 sm:w-1/2">
-                                <div class="mb-5">
-                                    <label class="font-medium text-right block mb-2 mt-2 text-gray-700" for="password">
-                                        نام کاربری
-                                    </label>
-                                    <input type="text" name="username" id="username" placeholder="نام کاربری"
-                                        class="w-full rounded-md border border-[#e0e0e0] mb-2 bg-white p-6 text-base font-medium text-[#6B7280] focus:outline-none focus:shadow-outline-yellow focus:border-yellow-300 focus:shadow-md" />
-                                    <span class="text-red-500" id="username-error"></span>
-
-                                </div>
-                            </div>
-                            <div class="w-full px-3 sm:w-1/2">
-                                <div class="mb-5">
-                                    <label class="font-medium text-right block mb-2 mt-2 text-gray-700" for="password">
-                                        ایمیل
-                                    </label>
-                                    <input type="email" name="email" id="email" placeholder="ایمیل"
-                                        class="w-full rounded-md border border-[#e0e0e0] mb-2 bg-white p-6 text-base font-medium text-[#6B7280] focus:outline-none focus:shadow-outline-yellow focus:border-yellow-300 focus:shadow-md" />
-                                    <span class="text-red-500" id="email-error"></span>
-
-                                </div>
-                            </div>
-                            <div class="w-full px-3 sm:w-1/2">
-                                <div class="mb-5">
-                                    <label class="font-medium text-right block mb-2 mt-2 text-gray-700" for="password">
-                                        شماره همراه
-                                    </label>
-                                    <input type="text" name="phone" id="phone" placeholder="شماره همراه"
-                                        class="w-full rounded-md border border-[#e0e0e0] mb-2 bg-white p-6 text-base font-medium text-[#6B7280] focus:outline-none focus:shadow-outline-yellow focus:border-yellow-300 focus:shadow-md" />
-                                    <span class="text-red-500" id="phone-error"></span>
-
-                                </div>
-                            </div>
-                            <div class="w-full px-3 sm:w-1/2">
-                                <div class="mb-5">
-                                    <label class="font-medium text-right block mb-2 mt-2 text-gray-700" for="password">
-                                        پسورد
-                                    </label>
-                                    <div dir="rtl" class="relative w-full">
-
-                                        <div class="absolute inset-y-0 right-0 flex items-center px-2">
-                                            <input class="hidden js-password-toggle-1" id="toggle" type="checkbox" />
-                                            <label
-                                                class="bg-gray-300 hover:bg-gray-400 rounded px-2 py-1 text-sm text-gray-600 font-mono cursor-pointer js-password-label-1"
-                                                for="toggle"><i class="ri-eye-off-line"></i></label>
-                                        </div>
-                                        <input
-                                            class="appearance-none block w-full text-left p-6 mb-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-yellow focus:border-yellow-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5 font-mono js-password-1"
-                                            id="password" name="password" type="password" autocomplete="off" />
-                                    </div>
-                                    <span class="text-red-500" id="password-error"></span>
-
-                                </div>
-
-                            </div>
-                            <div class="w-full px-3 sm:w-1/2">
-                                <div class="mb-5">
-                                    <label class="font-medium text-right block mb-2 mt-2 text-gray-700" for="password">
-                                        تایید پسورد
-                                    </label>
-                                    <div dir="rtl" class="relative w-full">
-
-                                        <div class="absolute inset-y-0 right-0 flex items-center px-2">
-                                            <input class="hidden js-password-toggle-2" id="toggle2" type="checkbox" />
-                                            <label
-                                                class="bg-gray-300 hover:bg-gray-400 rounded px-2 py-1 text-sm text-gray-600 font-mono cursor-pointer js-password-label-2"
-                                                for="toggle"><i class="ri-eye-off-line"></i></label>
-                                        </div>
-                                        <input
-                                            class="appearance-none block w-full text-left mb-2 p-6 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-yellow focus:border-yellow-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5 font-mono js-password-2"
-                                            id="password-confirm" name="passwordConfirm" type="password"
-                                            autocomplete="off" />
-                                    </div>
-                                    <span class="text-red-500" id="password-confirm-error"></span>
-
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="text-warning mt-4 text-center mb-4">
-                            <i class="ri-error-warning-line text-xl"></i>
-                            استفاده از سفیر به معنی پذیرش قوانین و مقررات این سرویس است.
-                        </div>
-
-                        <div class="mt-10 mb-6">
-                            <span class="block w-full rounded-md shadow-sm font-bold">
-                                <button id="register-btn" type="button"
-                                    class="w-full flex font-bold justify-center p-3 border border-transparent text-white font-medium rounded-md text-black bg-blue-600 hover:bg-blue-800 focus:outline-none focus:border-indigo-700 transition duration-150 ease-in-out">
-                                    ثبت نام
-                                </button>
-                            </span>
-                        </div>
-                        <p>
-                            حساب دارید؟ <a class="hover:text-blue-500" href="/login">ورود</a>
-                        </p>
-                </form>
+<body class="flex items-center justify-center h-screen">
+    <div id="first-auth" class="w-full max-w-lg">
+        <form class="bg-white border rounded-md px-10 pt-6 pb-8 mb-4" action="javascript:void(0);">
+            <h1 class="text-center mt-4 text-2xl font-bold">ثبت نام</h1>
+            <h1 class="text-center mb-10 mt-4 text-gray-700">برای ادامه شماره موبایل خود را وارد کنید.</h1>
+            <div class="mb-6">
+                <label class="block text-gray-700 font-bold mb-2" for="phone">
+                    شماره تلفن
+                </label>
+                <input
+                    class="appearance-none border rounded w-full py-4 px-4 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                    id="phone" type="text" placeholder="شماره تلفن">
             </div>
-        </div>
+            <div class="mb-6 relative">
+                <label class="block text-gray-700 font-bold mb-2" for="password">
+                    پسورد
+                </label>
+                <input
+                    class="appearance-none border rounded w-full py-4 px-4 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
+                    id="password" type="password" placeholder="********">
 
+                <i id="eye-open"
+                    class="ri-eye-line absolute text-xl  inset-y-0 left-0 top-4 flex items-center px-4 text-gray-700 toggle-password hidden"></i>
+                <i id="eye-closed"
+                    class="ri-eye-off-line absolute text-xl inset-y-0 left-0 top-4 flex items-center px-4 text-gray-700 toggle-password "></i>
+            </div>
+            <span class="text-gray-700 text-center text-sm"><i class="ri-error-warning-line text-xl"></i> استفاده از
+                سفیر به معنی پذیرش قوانین و مقررات این سرویس است.</span>
 
-        <script>
-            const passwordToggle1 = document.querySelector('.js-password-toggle-1')
-            const passwordToggle2 = document.querySelector('.js-password-toggle-2')
+            <div class="flex items-center justify-between mt-6 mb-4 w-full">
+                <button
+                    class="bg-blue-500 w-full border-blue-600 hover:bg-blue-700 text-white text-xl font-bold py-4 px-4 rounded focus:outline-none focus:shadow-outline"
+                    type="button" id="register-btn">
+                    ثبت نام
+                </button>
+            </div>
+          <span class="mt-4 text-center"> حساب دارید؟ <a class="text-blue-600" href="/login">ورود</a></span>
+        </form>
+    </div>
 
-            const password1 = document.querySelector('.js-password-1'),
-                passwordLabel1 = document.querySelector('.js-password-label-1')
-
-
-            const password2 = document.querySelector('.js-password-2'),
-                passwordLabel2 = document.querySelector('.js-password-label-2')
-
-
-            passwordToggle1.addEventListener('change', function () {
-
-                if (password1.type === 'password') {
-                    password1.type = 'text'
-                    passwordLabel1.innerHTML = '<i class="ri-eye-off-line"></i>'
-                } else {
-                    password1.type = 'password'
-                    passwordLabel1.innerHTML = '<i class="ri-eye-line"></i>'
-                }
-
-                password1.focus()
-            })
-
-            passwordToggle2.addEventListener('change', function () {
-                // if (password2.type === 'password') {
-                //     password2.type = 'text'
-                //     passwordLabel2.innerHTML = '<i class="ri-eye-off-line"></i>'
-                // } else {
-                //     password2.type = 'password'
-                //     passwordLabel2.innerHTML = '<i class="ri-eye-line"></i>'
-                // }
-
-                password2.focus()
-
-            })
-
-
-
-        </script>
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js"></script>
-        <script src="../../javascripts/user/register.js"></script>
-    </body>
+    <div id="second-auth" dir="ltr" class="bg-white py-16 px-12 rounded-lg border w-full max-w-lg hidden">
+        <h2 class="text-3xl font-semibold mb-2 text-center">کد تایید را وارد کنید </h2>
+        <p class="mb-8 text-center text-gray-600">کد ۵ رقمی به شماره 09383901146 ارسال شد</p>
+        <form>
+            <div class="flex justify-between mb-4 w-full">
+                <input id="inpt-1" type="text" maxlength="1" class="w-16 mr-2 h-16 pl-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-yellow-200" oninput="this.value=this.value.replace(/[^0-9]/g,'');">
+                <input id="inpt-2" type="text" maxlength="1" class="w-16 mr-2 h-16 pl-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-yellow-200" oninput="this.value=this.value.replace(/[^0-9]/g,'');">
+                <input id="inpt-3" type="text" maxlength="1" class="w-16 mr-2 h-16 pl-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-yellow-200" oninput="this.value=this.value.replace(/[^0-9]/g,'');">
+                <input id="inpt-4" type="text" maxlength="1" class="w-16 mr-2 h-16 pl-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-yellow-200" oninput="this.value=this.value.replace(/[^0-9]/g,'');">
+                <input id="inpt-5" type="text" maxlength="1" class="w-16 mr-2 h-16 pl-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-yellow-200" oninput="this.value=this.value.replace(/[^0-9]/g,'');">
+            </div>
+            <div id="timer" class="text-gray-600 text-center"></div>
+            <button id="verify-btn" type="button" class="w-full text-xl bg-blue-500 text-white py-4 mt-6 rounded-md hover:bg-blue-600 transition duration-200">تایید و ادامه</button>
+        </form>
+    </div>
+ 
+    <script src="../../javascripts/user/register.js"></script>
+    <script src="../../javascripts/user/verify.js"></script>
+    <script src="../../javascripts/utils/toast.js"></script>
+</body>
 
 </html>
