--- a/views/users/const/head.ejs
+++ b/views/users/const/head.ejs
@@ -10,6 +10,10 @@
         src="https://unpkg.com/@majidh1/jalalidatepicker/dist/jalalidatepicker.min.js"></script>
     <link rel="stylesheet" href="../../css/toastify.css">
     <script src="../../javascripts/utils/toast.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js"></script>
+    <link rel="stylesheet" href="../../css/toastify.css">
     <title><%=title%></title>
 
 </head>
