--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -1,190 +1,160 @@
 <!doctype html>
 <html dir="rtl">
 
-<%-include("./const/pagesHead")%>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://majidh1.github.io/JalaliDatePicker/assets/demo.css">
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/128/3304/3304749.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://unpkg.com/@majidh1/jalalidatepicker/dist/jalalidatepicker.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
+    <script type="text/javascript"
+        src="https://unpkg.com/@majidh1/jalalidatepicker/dist/jalalidatepicker.min.js"></script>
+    <link rel="stylesheet" href="../../css/toastify.css">
+    <script src="../../javascripts/utils/toast.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js"></script>
+    <link rel="stylesheet" href="../../css/toastify.css">
+    <title>
+        <%=title%>
+    </title>
 
-    <body>
-        <%-include("./const/header")%>
+</head>
 
-            <div class="flex h-screen m-10">
-                <!-- Sidebar -->
-                <%-include("./const/profileSidebar")%>
+<body>
+    <%-include("./const/header")%>
+
+        <div class="flex h-screen m-10">
+            <!-- Sidebar -->
+            <%-include("./const/profileSidebar")%>
 
 
-                    <!-- Main Content -->
-                    <div class="w-3/4 p-4 flex flex-col space-y-4 mr-4">
-                        <!-- Card 1 -->
-                        <div style="margin: 20px 0;" class="bg-white rounded-lg shadow p-6 flex justify-between">
-                            <div class="flex shrink-0 max-w-md gap-4 items-center">
-                                <img src="https://cdn.alibaba.ir/h2/desktop/assets/images/avatar-4c776756.svg"
-                                    alt="عکس پروفایل" data-src="" data-expand="0"
-                                    class="is-responsive is-animated rounded-full w-18 h-18 ls-is-cached lazyloaded">
-                                <div class="flex flex-col py-px overflow-hidden justify-center">
-                                    <span class="text-headline-sm text-grays-600 font-semibold">
-                                        <%=user.phone%>
-                                    </span>
-                                </div>
-                            </div>
-                            <div style="font-size: 18px;" class="flex flex-col justify-start ml-6">
-                                <h2 class="text-gray-700 mb-3 ml-2">موجودی حساب</h2>
-                                <h2 class="mb-3">
-                                    <b class="font-semibold text-xl">0</b>
-                                    <span class="text-gray-600">ریال</span>
-                                </h2>
-                                <button
-                                    class=" bg-transparent text-xl hover:bg-blue-600 text-blue-700 hover:text-white py-3 px-5 hover:border-transparent rounded">افزایش
-                                    موجودی <i class="ri-arrow-left-s-line"></i></button>
+                <!-- Main Content -->
+                <div class="w-3/4 p-4 flex flex-col space-y-4 mr-4">
 
-                            </div>
+                    <!-- Card 1 -->
+                    <!-- <div class="bg-white rounded-lg shadow p-6 flex justify-between">
+    
+                        </div> -->
 
-                        </div>
+                    <!-- Card 2 -->
+                    <div class="bg-white rounded-lg shadow p-6 flex justify-between">
 
-                        <!-- Card 2 -->
-                        <div style="margin: 20px 0;" class="bg-white rounded-lg shadow p-6 flex justify-between">
-                            <div class="flex flex-col mt-1">
-                                <h1 style="margin-bottom: 30px;font-size: 25px;"
-                                    class="text-xl font-bold text-gray-600"> <i
-                                        class="ri-user-follow-line ml-2 text-xl"></i> اطلاعات حساب کاربری </h1>
-                                <!-- inner 1-->
-                                <div style="font-size: 18px;" class="flex flex-row my-6 mx-8">
-                                    <p class="ml-6 text-gray-500">شماره همراه</p>
-                                    <p class="ml-6">
-                                        <%=user.phone%>
-                                    </p>
-                                    <span
-                                        class="bg-green-100 text-green-800 me-2 px-2.5 py-0.5 rounded dark:bg-green-900 dark:text-green-300 ml-6">
-                                        <i class="ri-checkbox-circle-line text-green-600">تایید شده</i>
-                                    </span>
-                                    <button class="text-blue-600">ویرایش <i class="ri-pencil-fill"></i></button>
-                                </div>
-                                <!-- end inner 1 -->
-                                <!-- inner 2-->
-                                <div style="font-size: 18px;" class="flex flex-row my-4 mx-8">
-                                    <p class="ml-6 text-gray-500">ایمیل</p>
-                                    <p class="ml-6">
-                                        <%=user.email%>
-                                    </p>
-                                    <span
-                                        class="bg-green-100 text-green-800 me-2 px-2.5 py-0.5 rounded dark:bg-green-900 dark:text-green-300 ml-6">
-                                        <i class="ri-checkbox-circle-line text-green-600">تایید شده</i>
-                                    </span>
-                                    <button class="text-blue-600">ویرایش <i class="ri-pencil-fill"></i></button>
-                                </div>
-                                <!-- end inner 2 -->
-                            </div>
+                        <!-- Author card -->
+                        <div
+                            class="w-full max-w-2xl my-4 flex flex-col items-start space-y-4 sm:flex-row sm:space-y-0 sm:space-x-6 px-4 py-8 rounded-lg">
 
-                            <div class="flex flex-col h-full ml-6">
-                                <div class="mt-auto">
-                                    <button
-                                        class="bg-transparent text-xl hover:bg-blue-600 text-blue-700 hover:text-white py-3 px-5 border border-blue-500 hover:border-transparent rounded">
-                                        <i class="ri-key-line"></i>
-                                        ویرایش کلمه عبور
-                                    </button>
-                                </div>
-                            </div>
-
-                        </div>
-
-                        <!-- Card 3 -->
-                        <div style="margin: 20px 0;" class="bg-white rounded-lg shadow p-6">
-
-                            <div class="flex justify-between items-center p-4">
-
-                                <h1 style="margin-bottom: 30px;font-size: 25px;"
-                                    class="text-xl font-bold text-gray-600"> <i class="ri-user-3-fill"></i> اطلاعات شخصی
+                            <div class="w-full sm:w-auto flex flex-col items-center sm:items-start">
+                              
+                                <h1
+                                    class="text-xl text-gray-800 mr-1 font-serif font-extrabold mb-2">
+                                   اطلاعات عمومی کاربر
                                 </h1>
-                                <button
-                                    class="bg-transparent text-xl hover:bg-blue-600 text-blue-700 hover:text-white py-3 px-5 hover:border-transparent rounded">
-                                    <i class="ri-pencil-line"></i>
-                                    ویرایش اطلاعات
-                                </button>
 
+                                <img class="object-cover w-40 h-40 mr-3 rounded-full"
+                                src="../../images/avatar.jpg">
+                                <p id="username" class="font-display mb-2 mr-2 font-semibold text-gray-600">
+                                </p>
+                                <p class="font-display mb-2 mr-2 font-semibold text-gray-600">
+                                    <%=user.phone%>
+                                </p>
+                                <p id="email-info" class="font-display mb-2 mr-2 font-semibold text-gray-600">
+                                </p>
                             </div>
-
-                            <div class="flex flex-wrap mt-auto">
-                                <!-- row 1, col1 -->
-                                <div style="font-size: 18px;" class="basis-1/2 w-1/2 p-2">
-                                    <div class="p-4">
-                                        <div class="flex flex-row my-6 mx-8">
-                                            <p class="ml-6 text-gray-500">نام و نام خانوادگی</p>
-                                            <% if (user.name) { %>
-                                                <p class="ml-6">
-                                                    <%=user.name %>
-                                                </p>
-                                                <% } else { %>
-                                                    <!-- <p class="w-full text-gray-700">-</p> -->
-                                                    <p class="border-t border-gray-600 px-6 inline-block mt-2 mr-8"></p>
-                                                    <% } %>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <!-- row 1, col2 -->
-                                <div style="font-size: 18px;" class="basis-1/2 w-1/2 p-2">
-                                    <div class="p-4">
-                                        <div class="flex flex-row my-6 mx-8">
-                                            <p class="ml-6 text-gray-500">شماره تلفن ضروری</p>
-                                            <% if (user.emergencyPhone) { %>
-                                                <p class="ml-6">
-                                                    <%=user.emergencyPhone %>
-                                                </p>
-                                                <% } else { %>
-                                                    <!-- <p class="w-full text-gray-700">-</p> -->
-                                                    <p class="border-t border-gray-600 px-6 inline-block mt-2 mr-8"></p>
-                                                    <% } %>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <!-- row 2, col1 -->
-                                <div style="font-size: 18px;" class="basis-1/2 w-1/2 p-2">
-                                    <div class="p-4">
-                                        <div class="flex flex-row my-6 mx-8">
-                                            <p class="ml-6 text-gray-500"> کد ملی</p>
-                                            <% if (user.nationalCode) { %>
-                                                <p class="ml-6">
-                                                    <%=user.nationalCode %>
-                                                </p>
-                                                <% } else { %>
-                                                    <!-- <p class="w-full text-gray-700">-</p> -->
-                                                    <p class="border-t border-gray-600 px-6 inline-block mt-2 mr-8"></p>
-                                                    <% } %>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <!-- row 2, col2 -->
-                                <div style="font-size: 18px;" class="basis-1/2 w-1/2 p-2">
-                                    <div class="p-4">
-                                        <div class="flex flex-row my-6 mx-8">
-                                            <p class="ml-6 text-gray-500">تاریخ تولد</p>
-                                            <% if (user.birthDay) { %>
-                                                <p class="ml-6">
-                                                    <%=user.birthDay %>
-                                                </p>
-                                                <% } else { %>
-                                                    <!-- <p class="w-full text-gray-700">-</p> -->
-                                                    <p class="border-t border-gray-600 px-6 inline-block mt-2 mr-8"></p>
-                                                    <% } %>
-
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
 
                         </div>
+
                     </div>
 
-                    <!-- footer -->
-                   
+                    <section class="py-10 px-20 bg-white rounded-md shadow mb-8">
 
-            </div>
+                        <!--  -->
+                        <div class="">
+
+                            <h2 class="text-grey text-sm mb-8 dark:text-gray-400">ویرایش پروفایل</h2>
+                            <form>
+                                <!-- Cover Image -->
+                                <div
+                                    class="w-full p-6 rounded-sm bg-[url('https://cdn.alibaba.ir/h2/desktop/assets/images/hero/hero-e1fa22fb.webp')] bg-cover bg-center bg-no-repeat items-center">
+                                    <!-- Profile Image -->
+                                    <div
+                                        class="mr-4 shadow-lg flex justify-center w-[140px] h-[140px] bg-blue-300/20 rounded-full bg-[url('../../images/avatar.jpg')] bg-cover bg-center ">
+
+                                        <div class="bg-white rounded-full w-8 h-6 text-center ml-28 mt-4">
+
+                                            <input type="file" name="avatar" id="avatar" hidden required>
+
+                                            <label for="avatar">
+                                                <svg data-slot="icon" class="w-8 h-6 text-blue-700 cursor-pointer"
+                                                    fill="none" stroke-width="1.5" stroke="currentColor"
+                                                    viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                                                    aria-hidden="true">
+                                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                                        d="M6.827 6.175A2.31 2.31 0 0 1 5.186 7.23c-.38.054-.757.112-1.134.175C2.999 7.58 2.25 8.507 2.25 9.574V18a2.25 2.25 0 0 0 2.25 2.25h15A2.25 2.25 0 0 0 21.75 18V9.574c0-1.067-.75-1.994-1.802-2.169a47.865 47.865 0 0 0-1.134-.175 2.31 2.31 0 0 1-1.64-1.055l-.822-1.316a2.192 2.192 0 0 0-1.736-1.039 48.774 48.774 0 0 0-5.232 0 2.192 2.192 0 0 0-1.736 1.039l-.821 1.316Z">
+                                                    </path>
+                                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                                        d="M16.5 12.75a4.5 4.5 0 1 1-9 0 4.5 4.5 0 0 1 9 0ZM18.75 10.5h.008v.008h-.008V10.5Z">
+                                                    </path>
+                                                </svg>
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
 
 
 
+                                <h2 class="text-center mt-1 font-semiboldtext-gray-700 font-semibold">
 
+                                </h2>
+                                <div
+                                    class="flex lg:flex-row md:flex-col sm:flex-col xs:flex-col gap-2 mt-4 justify-center w-full">
+                                    <div class="w-full mb-2 mt-8">
+                                        <label for="" class="mb-2 text-gray-700 font-semibold">نام و نام
+                                            خانوادگی</label>
+                                        <input type="text" id="name"
+                                            class="mt-2 px-4 py-8 w-full border-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-200"
+                                            placeholder="نام و نام خانوادگی">
+                                    </div>
+                                    <div class="w-full mb-2 mr-2 mt-8">
+                                        <label for="" class="text-gray-700 font-semibold">شماره همراه</label>
+                                        <input type="text" id="phone"
+                                            class="mt-2 px-4 py-8 w-full border-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-200"
+                                            placeholder="شماره همراه">
+                                    </div>
+                                </div>
 
-    </body>
+                                <div
+                                    class="flex lg:flex-row md:flex-col sm:flex-col xs:flex-col gap-2 mt-2 justify-center w-full">
+                                    <div class="w-full mb-2 mt-2">
+                                        <label for="" class="mb-2text-gray-700 font-semibold">ایمیل</label>
+                                        <input type="text"
+                                            class="mt-2 px-4 py-8 w-full border-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-200"
+                                            id="email" placeholder="ایمیل">
+                                    </div>
+                                    <div class="w-full mb-2 mr-2 mt-2">
+                                        <label for="" class="text-gray-700 font-semibold">کدملی</label>
+                                        <input type="text" id="national-code"
+                                            class="mt-2 px-4 py-8 w-full border-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-200"
+                                            placeholder="کدملی">
+                                    </div>
+                                </div>
+                                <div
+                                    class="w-full bg-transparent mt-8 hover:bg-blue-500 mx-auto text-blue-700 text-xl font-semibold hover:text-white border border-blue-500 hover:border-transparent rounded">
+                                    <button id="update-btn" type="button" class="w-full p-4">ویرایش حساب</button>
+                                </div>
+                            </form>
+                        </div>
+                    </section>
+
+                </div>
+
+                <!-- footer -->
+        </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js"></script>
+        <script src="../../javascripts/user/profile.js"></script>
+
+</body>
 
 </html>
